--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   certbot:
     restart: always
     image: certbot/certbot:latest
+    container_name: certbot
     volumes:
       - /etc/certbot/www/:/var/www/certbot/:rw
       - /etc/certbot/conf/:/etc/letsencrypt/:rw
@@ -9,6 +10,7 @@ services:
   nginx:
     restart: always
     image: nginx:latest
+    container_name: nginx
     ports:
       - "80:80"
       - "443:443"
@@ -35,6 +37,7 @@ services:
     restart: always
     image: streetcodeua/streetcode_client:${DOCKER_TAG_FRONTEND}
     pull_policy: always
+    container_name: frontend
     expose:
       - "80"
     healthcheck:
@@ -54,6 +57,7 @@ services:
   backend:
     restart: always
     image: streetcodeua/streetcode:${DOCKER_TAG_BACKEND}
+    container_name: backend
     pull_policy: always
     expose:
       - "80"
