--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - "80:80"
       - "443:443"
     environment:
-      FRONTEND_SERVER_NAME: ${FRONTEND_SERVER_NAME}
-      BACKEND_SERVER_NAME:  ${BACKEND_SERVER_NAME}
+      FRONTEND_SERVER_NAME: ${FRONTEND_SERVER_NAME_NEW}
+      BACKEND_SERVER_NAME:  ${BACKEND_SERVER_NAME_NEW}
     volumes:
       - ./templates:/etc/nginx/templates
       - /etc/certbot/www:/var/www/certbot/:ro
