--- a/templates/default.conf.template
+++ b/templates/default.conf.template
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name $FRONTEND_SERVER_NAME www.$FRONTEND_SERVER_NAME;
+    server_name $FRONTEND_SERVER_NAME_NEW www.$FRONTEND_SERVER_NAME_NEW;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -11,7 +11,7 @@ server {
 
 
     location / {
-    return 301 https://$FRONTEND_SERVER_NAME$request_uri;
+    return 301 https://$FRONTEND_SERVER_NAME_NEW$request_uri;
     }
 }
 
@@ -19,7 +19,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name $BACKEND_SERVER_NAME www.$BACKEND_SERVER_NAME;
+    server_name $BACKEND_SERVER_NAME_NEW www.$BACKEND_SERVER_NAME_NEW;
     server_tokens off;
 
 
@@ -29,18 +29,18 @@ server {
 
 
     location / {
-    return 301 https://$BACKEND_SERVER_NAME$request_uri;
+    return 301 https://$BACKEND_SERVER_NAME_NEW$request_uri;
     }
 }
 
 
 server {
     listen 443 ssl http2;
-    server_name $FRONTEND_SERVER_NAME;
+    server_name $FRONTEND_SERVER_NAME_NEW;
 
-    ssl_certificate /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME/privkey.pem;
-    ssl_trusted_certificate /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME/fullchain.pem;
+    ssl_certificate /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME_NEW/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME_NEW/privkey.pem;
+    ssl_trusted_certificate /etc/nginx/ssl/live/$FRONTEND_SERVER_NAME_NEW/fullchain.pem;
 
     client_max_body_size 50M;
 
@@ -56,11 +56,11 @@ server {
 server {
     listen 443 ssl http2;
 
-    server_name $BACKEND_SERVER_NAME;
+    server_name $BACKEND_SERVER_NAME_NEW;
 
-    ssl_certificate /etc/nginx/ssl/live/$BACKEND_SERVER_NAME/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/$BACKEND_SERVER_NAME/privkey.pem;
-    ssl_trusted_certificate /etc/nginx/ssl/live/$BACKEND_SERVER_NAME/fullchain.pem;
+    ssl_certificate /etc/nginx/ssl/live/$BACKEND_SERVER_NAME_NEW/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/$BACKEND_SERVER_NAME_NEW/privkey.pem;
+    ssl_trusted_certificate /etc/nginx/ssl/live/$BACKEND_SERVER_NAME_NEW/fullchain.pem;
 
     client_max_body_size 50M;
 
