--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: certbot
     volumes:
       - /etc/certbot/www/:/var/www/certbot/:rw
-      - /etc/certbot/conf/:/etc/letsencrypt/:rw
+      - /etc/certbot/conf/letsencrypt/:/etc/letsencrypt/:rw
 
   nginx:
     restart: always
@@ -15,12 +15,12 @@ services:
       - "80:80"
       - "443:443"
     environment:
-      FRONTEND_SERVER_NAME: ${FRONTEND_SERVER_NAME_NEW}
-      BACKEND_SERVER_NAME:  ${BACKEND_SERVER_NAME_NEW}
+      FRONTEND_SERVER_NAME: ${FRONTEND_SERVER_NAME}
+      BACKEND_SERVER_NAME:  ${BACKEND_SERVER_NAME}
     volumes:
       - ./templates:/etc/nginx/templates
       - /etc/certbot/www:/var/www/certbot/:ro
-      - /etc/certbot/conf:/etc/nginx/ssl/:ro
+      - /etc/certbot/conf/letsencrypt/:/etc/nginx/ssl/:ro
 
 
   loki:
