--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   loki:
     restart: always
     container_name: loki
-    image: grafana/loki:latest
+    image: grafana/loki:2.9.11
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
