--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
 
   dbupdate:
     restart: on-failure
-    image: streetcodeua/dbupdate:${DOCKER_TAG_DBUPDATE}
+    image: streetcodeua/dbupdate:${DOCKER_TAG_BACKEND}
     container_name: dbupdate
     pull_policy: always
     environment:
