define the network as external true

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,9 +113,9 @@ volumes:
   backend:
 networks:
   backend:
-    external:
+    external: true
       name: backend
   frontend:
-    external:
+    external: true
       name: frontend
 
