--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,8 @@ services:
     pull_policy: always
     environment:
       STREETCODE_ConnectionStrings__DefaultConnection: ${DB_CONNECTION_STRING}
-    networks:
-      - backend
+  #  networks:
+  #    - backend
     logging:
       driver: loki
       options:
