--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,9 +113,9 @@ volumes:
   backend:
 networks:
   backend:
-   # external: true
+    external: true
     name: backend
   frontend:
-    #external: true
+    external: true
     name: frontend
 
